Cambiada ruta de la configuración

--- a/src/conf/androidsms.conf
+++ b/src/conf/androidsms.conf
@@ -5,6 +5,9 @@ stderr_path = /dev/tty
 pidfile_path =  /var/run/androidsms/androidsms.pid
 log_path = /var/log/androidsms/androidsms.log
 
+[sqlite]
+pathdb = 
+
 [time]
 pidfile_timeout = 5
 
