Agregada ruta de la base de datos

--- a/src/conf/androidsms.conf
+++ b/src/conf/androidsms.conf
@@ -6,7 +6,7 @@ pidfile_path =  /var/run/androidsms/androidsms.pid
 log_path = /var/log/androidsms/androidsms.log
 
 [sqlite]
-pathdb = 
+pathdb = /home/ernesto/proyectos/python-android_sms/src/bd/sms.py
 
 [time]
 pidfile_timeout = 5
