--- a/src/conf/python_android_sms.conf
+++ b/src/conf/python_android_sms.conf
@@ -1,8 +1,14 @@
-[BD]
-ruta = /home/ernesto/proyectos/python-android_sms/src/bd/sms.py
+[tiempo]
+sleep = 3
 
 [usb]
 puerto = 8080
 
+[paths]
+stdin_path = /dev/null
+stdout_path = /dev/tty
+stderr_path = /dev/tty
+pidfile_path =  /var/run/androidsms/androidsms.pid
+log_path = /var/log/androidsms/androidsms.log
 
 
