Agregado ruta al log en el archivo de configuración

--- a/src/conf/devicecelldaemond.conf
+++ b/src/conf/devicecelldaemond.conf
@@ -3,6 +3,7 @@ null = '/dev/null'
 stdout = '/dev/tty'
 stderr = '/dev/tty'
 pidfile =  '/var/run/devicecelldaemond.pid'
+logfile = '/var/log/devicecell.log'
 
 [time]
 timeout = 5
