--- a/src/conf/devicecelldaemon.conf
+++ b/src/conf/devicecelldaemon.conf
@@ -1,9 +1,9 @@
 [paths]
-null = '/dev/null'
-stdout = '/dev/tty'
-stderr = '/dev/tty'
-pidfile =  '/var/run/devicecelldaemond.pid'
-logfile = '/var/log/devicecell.log'
+null = /dev/null
+stdout = /dev/tty
+stderr = /dev/tty
+pidfile =  /var/run/devicecelldaemon.pid
+logfile = /var/log/devicecell.log
 
 [time]
 timeout = 5
